<resources>
    <string name="app_name">Клиент</string>

    <string name="candidate1">Кандидат №1: </string>
    <string name="candidate2">Кандидат №2: </string>
    <string name="candidate3">Кандидат №3: </string>
    <string name="candidate4">Кандидат №4: </string>
    <string name="candidate5">Кандидат №5: </string>

    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Учавствовать в выборах</string>
    <string name="sign_in_error">Ошибка входа</string>

    <string name="send_bulletin">Отправить бюллетень</string>
    <string name="check_bulletin">Проверить бюллетень</string>
    <string name="show_results">Посмотреть результаты</string>

    <string name="you_can_vote">Вы можете голосовать</string>
    <string name="you_can_not_vote">Вы не можете голосовать повторно</string>
    <string name="bulletin_was_register">"Ваш бюллетень зарегестрирован</string>
    <string name="bulletin_was_not_register">"Ваш бюллетень откланен"</string>
    <string name="bulletin_counted">Ваш голос учтен</string>
    <string name="bulletin_not_counted">Не удалось распознать ваш  бюллетень</string>
    <string name="your_bulletin_is">Ваш бюллетень:  %1$s</string>
    
</resources>
